--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,3 +19,11 @@ jobs:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         goos: linux
         goarch: amd64
+    - uses: MCJack123/ghaction-generate-release-hashes@v3
+      with:
+        hash-type: sha256
+        file-name: sha256sums.txt
+    - uses: actions/upload-artifact@v2
+      with:
+        name: Asset Hashes
+        path: sha256sums.txt
