--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,12 +19,24 @@ jobs:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         goos: linux
         goarch: amd64
-    - uses: MCJack123/ghaction-generate-release-hashes@v3
+    - name: Checkout sources
+      uses: actions/checkout@v2
+    - name: Download releaseartifacts
+      uses: actions/download-artifact@v2
       with:
-        hash-type: sha256
-        file-name: sha256sums.txt
-        get-assets: true
-    - uses: actions/upload-artifact@v2
+        name: release-artifacts
+        path: release
+    - name: Generate checksum
+      uses: jmgilman/actions-generate-checksum@v1
       with:
-        name: Asset Hashes
-        path: sha256sums.txt
+        output: sha256sums.txt
+        patterns: |
+          release/*.zip
+          release/*.tar.gz
+    - name: Create release
+      uses: softprops/action-gh-release@v1
+      with:
+        files: |
+          checksum.txt
+          release/*.zip
+          release/*.tar.gz
