--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,14 +13,14 @@ jobs:
     name: release linux/amd64
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - uses: wangyoucao577/go-release-action@v1
+    - name: Checkout Sources
+      uses: actions/checkout@v4
+    - name: Build
+      uses: wangyoucao577/go-release-action@v1
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         goos: linux
         goarch: amd64
-    - name: Checkout sources
-      uses: actions/checkout@v2
     - name: Download releaseartifacts
       uses: actions/download-artifact@v2
       with:
