--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,9 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         goos: linux
-        goarch: amd64       
+        goarch: amd64 
+    - name: Checkout Sources
+      uses: actions/checkout@v4              
     - name: Download releaseartifacts
       uses: actions/download-artifact@v2
       with:
